
generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}


enum OrderStatus {
  draft
  pending_payment
  paid
  cancelled
}

enum TicketStatus {
  pending
  paid
  cancelled
  used
}


model User {
  id        String     @id @default(uuid())
  email     String     @unique
  name      String?
  password  String
  isVerified Boolean   @default(false)
  lastLogin DateTime?
  role      String     @default("USER")
  tickets   Ticket[]
  orders    Order[]
  sessions  Session[]
  reviews   Review[]
  teamRoles TeamMember[]
  logs      ActivityLog[]
  notifications Notification[]
  eventLogs EventLog[]
  blocked   BlockedUser?
  metadata  Json?      
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
}

model Organizer {
  id        String     @id @default(uuid())
  name      String
  events    Event[]
  team      TeamMember[]
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
}

model Event {
  id           String        @id @default(uuid())
  title        String
  description  String?
  date         DateTime
  location     String
  maxCapacity  Int?
  isPublished  Boolean       @default(false)
  isCancelled  Boolean       @default(false)
  allowAnonymousPurchase Boolean @default(false)
  allowTransfer          Boolean @default(false)
  tickets      Ticket[]
  reviews      Review[]
  category     Category?     @relation(fields: [categoryId], references: [id])
  categoryId   String?
  venue        Venue?        @relation(fields: [venueId], references: [id])
  venueId      String?
  organizer    Organizer     @relation(fields: [organizerId], references: [id])
  organizerId  String
  theme        Theme?        @relation(fields: [themeId], references: [id])
  themeId      String?
  metadata     Json?         
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
}

model Order {
  id             String     @id @default(uuid())
  user           User       @relation(fields: [userId], references: [id])
  userId         String
  tickets        Ticket[]
  payment        Payment?
  totalPrice     Float
  status         OrderStatus
  promoCode      String?    
  discountAmount Float?     
  currency       String     @default("EUR") 
  metadata       Json?      
  createdAt      DateTime   @default(now())
  updatedAt      DateTime   @updatedAt
}

model Ticket {
  id         String   @id @default(uuid())
  user       User?    @relation(fields: [userId], references: [id])
  userId     String?
  event      Event    @relation(fields: [eventId], references: [id])
  eventId    String
  order      Order?   @relation(fields: [orderId], references: [id])
  orderId    String?
  code       String   @unique
  status     TicketStatus @default(paid)
  seatNumber String?
  qrCode     QRCode?
  usedAt     DateTime?
  purchasedAt DateTime @default(now())
  metadata   Json?    
}

model Payment {
  id            String   @id @default(uuid())
  order         Order    @relation(fields: [orderId], references: [id])
  orderId       String   @unique
  paymentMethod String
  paymentStatus String
  paymentDate   DateTime
  transactionId String
  currency      String   @default("EUR") 
}

model Category {
  id    String   @id @default(uuid())
  name  String   @unique
  events Event[]
}

model Venue {
  id       String   @id @default(uuid())
  name     String
  address  String
  capacity Int
  events   Event[]
}

model Review {
  id        String   @id @default(uuid())
  user      User     @relation(fields: [userId], references: [id])
  userId    String
  event     Event    @relation(fields: [eventId], references: [id])
  eventId   String
  rating    Int
  comment   String?
  createdAt DateTime @default(now())
}

model TeamMember {
  id          String     @id @default(uuid())
  organizer   Organizer  @relation(fields: [organizerId], references: [id])
  organizerId String
  user        User       @relation(fields: [userId], references: [id])
  userId      String
  role        String
  joinedAt    DateTime   @default(now())
}

model Theme {
  id          String   @id @default(uuid())
  name        String
  description String?
  imagePath   String
  color       String?
  metadata    Json?
  events      Event[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model QRCode {
  id         String    @id @default(uuid())
  ticket     Ticket    @relation(fields: [ticketId], references: [id])
  ticketId   String    @unique
  path       String
  format     String
  createdAt  DateTime  @default(now())
  expiresAt  DateTime?
  scannedAt  DateTime?
  data       Json?
}

model ActivityLog {
  id         String   @id @default(uuid())
  user       User     @relation(fields: [userId], references: [id])
  userId     String
  action     String
  targetType String
  targetId   String
  timestamp  DateTime @default(now())
}

model EventLog {
  id        String   @id @default(uuid())
  user      User?    @relation(fields: [userId], references: [id])
  userId    String?
  type      String
  context   String?
  createdAt DateTime @default(now())
}

model Notification {
  id        String   @id @default(uuid())
  user      User     @relation(fields: [userId], references: [id])
  userId    String
  type      String
  message   String
  isRead    DateTime?
  sentAt    DateTime
}

model Session {
  id        String   @id @default(uuid())
  user      User     @relation(fields: [userId], references: [id])
  userId    String
  token     String   @unique
  ipAddress String?
  userAgent String?
  createdAt DateTime @default(now())
  expiresAt DateTime
}

model BlockedUser {
  id        String   @id @default(uuid())
  user      User     @relation(fields: [userId], references: [id])
  userId    String   @unique
  reason    String
  blockedAt DateTime @default(now())
}

model Translation {
  id         String   @id @default(uuid())
  entityType String
  entityId   String
  locale     String
  field      String
  value      String
}
